# mlds6_sentiment_model

./: MLproject  pyproject.toml
mlds6sentiment/: database.py  feature_extraction.py  metrics.py  models.py
mlds6sentiment/types/: feature_extraction.py  hparams.py  metrics.py  models.py
scripts/: vidhya.py
scripts/mlruns/0/: meta.yaml
scripts/mlruns/1/: meta.yaml
