[tool.poetry]
name = "mlds6sentiment"
version = "0.1.0"
description = "Model for sentiment analysis."
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">3.8"
mlflow = "^1.26.0"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
nltk = "^3.7"
pyarrow = "^8.0.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
